fix: gap header

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -113,7 +113,6 @@ header {
 .collectionsHeader {
     color: white;
     display: flex;
-    gap: 10px;
 }
 
 .collectionsContainer {
